initial wiring up