@@ -10,6 +10,15 @@ val localEnv =
         }
     }
 
+val uid =
+    runCatching {
+        providers
+            .exec { commandLine("id", "-u") }
+            .standardOutput.asText
+            .get()
+            .trim()
+    }.getOrDefault("1000")
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -27,9 +36,10 @@ java { toolchain { languageVersion = JavaLanguageVersion.of(25) } }
 tasks.named<Test>("test") { useJUnitPlatform() }
 
 tasks.withType<Test>().configureEach {
-    environment(
-        "DOCKER_HOST",
-        "unix:///run/user/${System.getenv("UID") ?: "1000"}/podman/podman.sock",
-    )
+    minHeapSize = "64m"
+    maxHeapSize = "128m"
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
+    environment("DOCKER_HOST", "unix:///run/user/$uid/podman/podman.sock")
     environment("TESTCONTAINERS_RYUK_DISABLED", "true")
 }
